--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -21,10 +21,10 @@
 }
 
 .modal-container {
-  min-width: 200px;
-  min-height: 150px;
   max-width: 90%;
+  min-width: 250px;  
   max-height: 90%;
+  min-height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -60,6 +60,7 @@
 .modal-content {
   width: 100%;
   height: 100%;
+  min-height: fit-content;
   padding: 30px 10px 20px;
   display: flex;
   flex-direction: column;
