--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -32,6 +32,7 @@ h3 {
 
 .lists-container {
   width: 30%;
+  min-width: 250px;
   height: 100%;
   padding-bottom: 50px;
   position: relative;
@@ -39,19 +40,6 @@ h3 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  // border: 1px solid green;
-
-  .items-container {
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    padding: 20px;
-    gap: 5px; // ???
-    background: $light-3;
-    & > div {
-      width: 100%;
-    }
-  }
 }
 
 .tasks-container {
@@ -63,7 +51,6 @@ h3 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  // border: 1px solid green;
 
   .tasks-header {
     width: 100%;
@@ -71,17 +58,17 @@ h3 {
     display: flex;
     justify-content: space-between;    
   }
+}
 
-  .items-container {
+.items-container {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  padding: 20px;
+  gap: 5px;
+  background: $light-3;
+  & > div {
     width: 100%;
-    height: 100%;
-    padding: 20px;
-    gap: 5px; // ???
-    border-radius: 15px;
-    background: $light-3;
-    & > div {
-      width: 100%;
-    }
   }
 }
 
@@ -108,7 +95,6 @@ h3 {
   }
 }
 
-// ??????????????
 .item-wrapper {
   margin: 4px 0;
   background: none;
@@ -124,7 +110,7 @@ h3 {
 }
 
 // ******** Media Queries *********
-@media screen and (max-width: 600px){
+@media screen and (max-width: 700px){
   .home {
     width: 100%;
     display: flex;
