--- a/src/app/pages/sign-in/sign-in.component.scss
+++ b/src/app/pages/sign-in/sign-in.component.scss
@@ -3,9 +3,11 @@
 :host {
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 .sign-in-form {
+  height: 100%;
   width: 100%;
   min-width: 300px;
   display: flex;
@@ -77,5 +79,4 @@
   background: $primary-2;
 }
 
-@media screen and (max-width: 700px) {
-}
+
