--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -3,10 +3,12 @@
 :host {
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 .sign-up-form {
   width: 100%;
+  height: 100%;
   min-width: 300px;
   display: flex;
   flex-direction: column;
